feat: salom member add and fix swagger
