# internal/infra/http/routes/salon.go
@@ -13,6 +13,7 @@ func setupSalonRouter(router fiber.Router) {
 	salons := router.Group("/salon")
 	salons.Get("/:id", salonHandler.GetSalonById)
 	salons.Post("/", middlewares.EnsureProfessionalRole(), salonHandler.CraeteSalon)
+	salons.Post("/:id/members", middlewares.EnsureProfessionalRole(), salonHandler.AddSalonMember)
 
 	salons.Post("/:id/address", middlewares.EnsureProfessionalRole(), salonHandler.AddSalonAddress)
 	salons.Put("/:id/address/:addressId", middlewares.EnsureProfessionalRole(), salonHandler.UpdateSalonAddress)
